<resources>
    <string name="app_name">Loading App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_loading">Loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_option">Glide-Image Loading Library by BumpTech</string>
    <string name="load_app_option">Load App-Current repository by Udacity</string>
    <string name="retrofit_option">Retrofit-Type-Safe-HTTP client for Android and Java by Square, Inc</string>

    <string name="download_button">Download</string>
    <string name="download_toast">Please select the file to download</string>
    <string name="success_status">Success</string>
    <string name="fail_status">Fail</string>
    <string name="notification_channel_description">Used to display download status</string>

    <string name="glide_selected">Glide</string>
    <string name="load_app_selected">Load App</string>
    <string name="retrofit_selected">Retrofit</string>
    <string name="ok">OK</string>
    <string name="file_name_label">File Name</string>
    <string name="status_label">Status</string>
    <string name="success_toast">File downloaded successfully</string>
    <string name="fail_toast">Failed to download file</string>

</resources>
