<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/download_icon"
        android:background="@color/colorPrimaryDark">

    </ImageView>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_logo"
        android:padding="@dimen/fab_margin">

        <RadioButton
            android:id="@+id/glideOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/glide_option"
            android:layout_margin="@dimen/option_margin"/>

        <RadioButton
            android:id="@+id/loadAppOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_app_option"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_margin="@dimen/option_margin"/>

        <RadioButton
            android:id="@+id/retrofitOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/retrofit_option"
            android:layout_margin="@dimen/option_margin"/>

    </RadioGroup>


    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:CircleColor="@color/colorAccent"
        app:backgroundColor="@color/colorPrimary"
        app:buttonLoadingColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintVertical_bias="0.90999997"
        app:textColor="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>